portfolio page stuck on styling issues

--- a/client/src/styles/_portfoliopage.scss
+++ b/client/src/styles/_portfoliopage.scss
@@ -30,13 +30,14 @@
                 transform-origin: center;
                 transform: scale(0);
                 transition: all .4s ease-in-out;
+
             }
 
             &:hover::before {
                 transform: scale(1);
             }
 
-            .images {
+            img {
                 width: 100%;
                 height: 30vh;
                 object-fit: cover;
